Add array of played duels

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,11 @@
         <a href="/duels">List of current duels</a>
       </div>
     </div>
+    <div class="large-12 columns">
+      <div class="panel">
+        <a href="/played">List of played duels</a>
+      </div>
+    </div>
   </div>
 </body>
 </html>
