Add track by $index for the array of logs fix #4

--- a/public/mdo.html
+++ b/public/mdo.html
@@ -75,7 +75,7 @@
 
     <div class="medium-6 columns">
       <div id="log" class="panel">
-        <div ng-repeat="log in logs">
+        <div ng-repeat="log in logs track by $index">
           <small>
             {{ log }}
           </small>
